# startprojectformillion

./: .gitignore  CLAUDE.md  PROJECT_HANDOFF.md
backend/: .env.example  RELEASE_STATUS.md  docker-compose.postgres-smoke.yml  pyproject.toml
backend/docs/: admin_support_internal_read_gate_runbook.md  adr_billing_ingestion_audit_retention.md  adr_slice1_retention_scheduled_job.md  billing_normalized_ingest_runbook.md  billing_operator_ingest_apply_runbook.md  billing_subscription_apply_runbook.md  issuance_operator_runbook.md  mvp_release_artifact_manifest.md  mvp_release_ci_trigger_decision.md  mvp_release_readiness_runbook.md  mvp_release_staging_manifest.md  operator_environment_validation_bootstrap.md  plan_slice1_retention_scheduled_minimal_impl.md  postgres_mvp_smoke_runbook.md  slice1_retention_dry_run_runbook.md  slice1_retention_manual_cleanup_runbook.md  slice1_retention_scheduled_runbook.md  telegram_access_resend_runbook.md
backend/migrations/: 001_user_identities.sql  002_idempotency_records.sql  003_subscription_snapshots.sql  004_slice1_audit_events.sql  005_retention_timestamps.sql  006_slice1_uc01_outbound_deliveries.sql  007_slice1_uc01_outbound_deliveries_sent_retention_index.sql  008_billing_events_ledger.sql  009_billing_ingestion_audit_events.sql  010_billing_subscription_apply.sql  011_issuance_state.sql  012_adm02_ensure_access_audit_events.sql  013_telegram_update_dedup.sql  014_subscription_lifecycle_v1.sql  015_access_reconcile_runs.sql
backend/scripts/: check_adm01_internal_http_entrypoint_smoke.py  check_admin_support_internal_read_gate.py  (+20 more)
(+458 files in other folders)
