[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-vpn-backend"
version = "0.1.0"
description = "Slice 1 control-plane backend (UC-01/UC-02 primitives)"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29,<1",
  "httpx>=0.27,<1",
  "starlette>=0.38,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
